# prisma_access_ansible_collection

./: .gitignore  README.md  pyproject.toml  workflow.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: new-issue.md
cdot65/prisma_access/: CHANGELOG.rst  README.md  galaxy.yml
cdot65/prisma_access/changelogs/: changelog.yaml  config.yaml
cdot65/prisma_access/docs/: cdot65.prisma_access.address.rst  cdot65.prisma_access.address_group.rst  cdot65.prisma_access.address_groups.rst  cdot65.prisma_access.addresses.rst  cdot65.prisma_access.config_push.rst  cdot65.prisma_access.ike_gateway.rst  cdot65.prisma_access.ipsec_tunnel.rst  cdot65.prisma_access.service_connection.rst  cdot65.prisma_access.tag.rst
cdot65/prisma_access/plugins/module_utils/: api_spec.py  authenticate.py
cdot65/prisma_access/plugins/modules/: address.py  address_group.py  address_groups.py  addresses.py  config_push.py  ike_gateway.py  ipsec_tunnel.py  remote_network.py  service_connection.py  tag.py
cdot65/prisma_access/tests/: address.yaml  address_group.yaml  address_groups.yaml  addresses.yaml  ansible.cfg  config_push.yaml  ike_gateway.yaml  inventory.yaml  ipsec_tunnel.yaml  remote_networks.yaml  service_connections.yaml  tag.yaml
cdot65/prisma_access/tests/group_vars/all/prisma/: prisma_address.yaml  prisma_addresses.yaml
cdot65/prisma_access/tests/group_vars/prisma/: prisma_tags.yaml
